# libigl-scratch

./: CMakeLists.txt
cmake/: cli11.cmake  h3.cmake
src/: cgal.cpp  cgal.hpp  cu_main.cpp  cu_sphere.cu  cu_sphere.hpp  cuda.hpp  legendre.hpp  main.cpp  sphere.cpp  sphere.hpp  sphere_rand_points.cpp  util.hpp
